updated listener to use form

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <label>Street<input type="text" name="street" placeholder="Street "></input></label><br>
 <label>City<input type="text" name="city" placeholder="City"></input></label><br>
 <label>State<input type="text" name="state" placeholder="State"></input></label><br>
-<input class="button" type="button" name='addContact' value="Add" onClick="createNewContact(this.form)"> <!--This will run a function on click-->
+<input class="button" type="submit" name='addContact' value="Add"> <!--This will run a function on click-->
 </fieldset>
 </form>
 <div class="contactDisplay"></div>
