--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 	
 </head>
 <body>
-	<form name="contactForm" action="">
+		<form name="contactForm" action="">
   <fieldset>
   <legend>Contact Information:</legend>
 
     <label>First Name<input type="text" name="firstName" placeholder="First name"></input></label><br>
 <label>Last Name<input type="text" name="lastName" placeholder="Last name"></input></label><br>
-<label>Phone Number<input type="text" name="phone" placeholder="Phone Number"></input></label><br>
+<label>Phone Number<input type="text" name="phone" placeholder="Phone Number"></input></label>
+<label class="hideAltPhone">Alt. Phone Number<input type="text" name="phone2" placeholder="Phone Number"></input></label>
+<p class='toggle-button'> + Phone Number </p><br>
 <label>eMail<input type="text" name="eMail" placeholder="eMail"></input></label><br>
 <label>Street<input type="text" name="street" placeholder="Street "></input></label><br>
 <label>City<input type="text" name="city" placeholder="City"></input></label><br>
@@ -29,9 +31,13 @@
 <input class="button" type="submit" name='addContact' value="Add"> <!--This will run a function on click-->
 </fieldset>
 </form>
-<div class="contactDisplay"></div>
-<h1> Contacts: </h1>
-<div class="contactList"></div>
 
+
+<div class="monitor">
+  <h1 class='center'> Contacts: </h1>
+<div class="contactList"></div>
+  <h1> Details: </h1>
+  <div class="contactDisplay"></div>
+</div>
 </body>
 </html>
