added edit button that pulls contact to form

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<label class="hideAltAddr">Alt. State<input type="text" name="state2" placeholder="State"></input></label><br>
 			<p class='toggle-buttonAddr'> + Address </p><br>
 			<input class="button" type="submit" name='addContact' value="Add"> <!--This will run a function on click-->
+			<input type="hidden" name="idHolder" value="">
 		</fieldset>
 	</form>
 	<div class="monitor">
